# InterfaceGenerator

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
dtig/: generator.py
dtig/base/: compiler_base.py  generator_base.py
dtig/common/: engines.py  json_configuration.py  keys.py  logging.py  model_configuration_base.py  result.py
dtig/engines/fmi/: generator_fmi2.py  server_callbacks.py
dtig/engines/fmi2/: generator_fmi2.py  server_callbacks.py
dtig/engines/hla_rti1516/: generator_hla.py
dtig/engines/simulink2023b/: generator_simulink2023b.py
dtig/interface/: cpp_generator.py  matlab_generator.py  python_generator.py
dtig/interface/templates/: python_server_template.py
dtig/tools/: cmake.py  cpp.py  file_system.py  matlab.py  protobuf.py  python.py
experiments/client/: fmi2_config.json  main.py
experiments/combined/: README.md  cmd_config.json  fmi.csv  fmi_config.json  fom.xml  freecad_config.json  main.py  matlab_config.json  simulink_config.json
experiments/combined/foms/: fmi.xml  fom.xml  freecad.xml  matlab.xml
experiments/combined/models/: FemTest.20240425-144830.FCBak  FemTest.20240719-165603.FCBak  FemTest.FCStd  bouncing_ball.slx  fmi2.fmu  force_calculator.slx  force_calculator_script.m
experiments/fmi/: BouncingBall.fmu  config.json  fmi2_client.py  fmi2_config.json  fmi2_server.py  main.py
experiments/fmi/fmus/: Dahlquist.fmu  VanDerPol.fmu
experiments/fmi/protobuf/: advance_pb2.py  dt_message_pb2.py  identifiers_pb2.py  initialize_pb2.py  input_pb2.py  output_pb2.py  parameter_pb2.py  return_code_pb2.py  return_value_pb2.py  run_mode_pb2.py  start_pb2.py  step_pb2.py  stop_mode_pb2.py  stop_pb2.py  utils_pb2.py  values_pb2.py
experiments/freecad/: FemTest.20240719-162052.FCBak  FemTest.FCStd  config.json  main.py  test.py
experiments/hla/: bouncing_ball.slx  bouncing_ball.xml  config.json  hla_config.json  main.py
experiments/hla/example/: ExampleCPPFederate.h  main.cpp
experiments/hla_example/: CMakeLists.txt  ExampleCPPFederate.cpp  ExampleFedAmb.cpp  ExampleFedAmb.h  testfom.xml
experiments/matlab/: Test.java  bouncing_ball.slxc  config.json  main.py  simulink2023b_server.m
extension/dtig/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
extension/dtig/syntaxes/: dtig.tmLanguage.json
protobuf/: advance.proto  dt_message.proto  identifiers.proto  initialize.proto  input.proto  model_info.proto  output.proto  parameter.proto  return_code.proto  return_value.proto  run_mode.proto  start.proto  step.proto  stop.proto  stop_mode.proto  utils.proto  values.proto
source/base/: compiler_base.py  generator_base.py
source/common/: default_structure.py  engines.py  json_configuration.py  keys.py  logging.py  model_configuration_base.py  result.py
source/engines/cmd/: cmd_generator.py
source/engines/fmi2/: generator_fmi2.py  server_callbacks.py
source/engines/freecad/: generator_freecad.py  server_callbacks.py
source/engines/hla_rti1516/: generator_hla.py
source/engines/matlab2023b/: generator_matlab2023b.py  server_callbacks.m
source/engines/matlab2024a/: generator_matlab2024a.py  generator_simulink2024a.py  matlab_callbacks.m  simulink_callbacks.m
source/engines/openrti/: generator_openrti.py  generator_openrti_1516e.py
source/engines/openrti1516/: generator_openrti.py  generator_openrti_cmd.py
source/interface/: cpp_generator.py  matlab_generator.py  python_generator.py
source/language/: dtig.lark  lexer.py  lexer_tokens.py  parser.py  parser_tokens.py
source/parser/: config.json  lexer.py  parser.py
source/tools/: cpp.py  file_system.py  git.py  matlab.py  protobuf.py  python.py
(+33 files in other folders)
