[options]
packages = find:

[options.packages.find]
include = dtig

# In our case, this means if you want to install some specific sub-packages inside melhousing, for instance
# classes, and consequently only write import classes instead of import melhousing.classes in any scripts,
# we will make some changes as followed. Note that you can replace classes with * to import all sub-packages,
# and the arguments package_dir and where take on the same value.

# [options.packages.find]
# where = melhousing
# include = classes